# Wyatt

./: .gitignore  01.txt  02.txt  03.gfx  03.txt  :w  CMakeLists.txt  DOC.md  Makefile  README.md  TODO.md  TUTORIAL.md  codeeditor.cpp  codeeditor.h  customglwidget.cpp  customglwidget.h  glsltranspiler.cpp  glsltranspiler.h  helper.cpp  helper.h  highlighter.cpp  highlighter.h  interpreter.cpp  interpreter.h  logwindow.cpp  logwindow.h  main.cpp  main.gfx  main.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  myparser.cpp  myparser.h  nodes.h  normals.gfx  parser.cpp  parser.h  parser.output  parser.y  (+23 more)
code/: 01.gfx  02.5.gfx  02.gfx  03.5.gfx  03.gfx  04.gfx  cobble.gfx  kernel.gfx  lag.gfx  main.gfx  sphere.gfx  utils.gfx
docs/: MANUAL.md  SPEC.md  TUTORIAL.md  index.html
lang/: glsltranspiler.cpp  helper.h  interpreter.cpp  nodes.h  parser.y  scanner.h  scanner.l  scope.cpp
src/: main.cpp
src/lang/: dummyglfunctions.h  glsltranspiler.cpp  glsltranspiler.h  helper.cpp  helper.h  interpreter.cpp  interpreter.h  lang.pri  nodes.h  parser.y  scanner.h  scanner.l  scope.cpp  scope.h  scopelist.cpp  scopelist.h
src/ui/: codeeditor.cpp  codeeditor.h  customglwidget.cpp  customglwidget.h  highlighter.cpp  highlighter.h  logwindow.cpp  logwindow.h  mainwindow.cpp  mainwindow.h
ui/: codeeditor.cpp  customglwidget.cpp  highlighter.cpp  mainwindow.cpp  mainwindow.h  ui.pri
